# kafka-client

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/skills/comments/: SKILL.md
.github/workflows/: ci.yml
src/: admin.rs  broker.rs  client.rs  cluster.rs  config.rs  connection.rs  error.rs  lib.rs  secret.rs
src/client/: mod.rs  retry.rs
src/producer/: batch.rs  mod.rs  partitioner.rs
src/protocol/: api_versions.rs  metadata.rs  mod.rs  sasl_authenticate.rs  sasl_handshake.rs
src/tests/: admin.rs  close.rs  close_dial_race.rs  cluster.rs  fatal_dial.rs  mod.rs  reauth.rs  reconnect_backoff.rs  send_request.rs  standalone.rs  standalone_sasl.rs  standalone_tls.rs  timeout_connection.rs  timeout_idle.rs  timeout_request.rs  topic_metadata.rs
src/tests/helpers/: containers.rs  log_wait.rs  mod.rs  proxy.rs  shared.rs  stall_listener.rs  tls.rs  topic.rs
tests/: cluster.rs  cluster_tls.rs  standalone.rs  standalone_sasl.rs  standalone_tls.rs  task_count.rs
tests/common/: mod.rs
tests/fixtures/secrets/: ca.pem  client.key  client.pem  kafka.truststore.jks  kafka01.keystore.jks
