[package]
name = "kafka-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt", "rt-multi-thread", "macros", "sync"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging"] }
tokio-rustls = "0.26"
zeroize = "1"
tracing = "0.1"
kafka-protocol = { version = "0.17", default-features = false, features = ["client"] }
bytes = "1"
anyhow = "1"

[dev-dependencies]
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["kafka"] }
tokio = { version = "1", features = ["full"] }
rustls-pemfile = "2"
