[package]
name = "kafka-client"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt", "rt-multi-thread", "macros", "sync", "time"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging"] }
tokio-rustls = "0.26"
zeroize = "1"
tracing = "0.1"
kafka-protocol = { version = "0.17", default-features = false, features = ["client"] }
bytes = "1"
anyhow = "1"
fastrand = "2"
arc-swap = "1"
zeropool = "0.3"
socket2 = "0.6.3"

[dev-dependencies]
kafka-protocol = { version = "0.17", default-features = false, features = ["client", "broker"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["kafka"] }
tokio = { version = "1", features = ["full"] }
rustls-pemfile = "2"
tracing-test = "0.2"
